# learn_libtorch

./: README.md
libtorch_1/: CMakeLists.txt  main.cpp
libtorch_2/: CMakeLists.txt  main.cpp
libtorch_2/include/: BaseModule.h  CNN.h
libtorch_2/src/: BaseModule.cpp  CNN.cpp
